- Created an enum for question categories