@@ -1,7 +1,9 @@
 package com.adaptionsoft.games.uglytrivia;
 
-import java.util.ArrayList;
-import java.util.LinkedList;
+import java.util.*;
+
+import static com.adaptionsoft.games.uglytrivia.Category.*;
+import static java.util.Arrays.*;
 
 public class Game {
     ArrayList players = new ArrayList();
@@ -9,25 +11,23 @@ public class Game {
     int[] purses = new int[6];
     boolean[] inPenaltyBox = new boolean[6];
 
-    LinkedList popQuestions = new LinkedList();
-    LinkedList scienceQuestions = new LinkedList();
-    LinkedList sportsQuestions = new LinkedList();
-    LinkedList rockQuestions = new LinkedList();
+    private Map<Category, List<String>> categoryQuestions = new HashMap<>();
 
     int currentPlayer = 0;
     boolean isGettingOutOfPenaltyBox;
 
     public Game() {
-        for(int i = 0; i < 50; i++) {
-            popQuestions.addLast("Pop Question " + i);
-            scienceQuestions.addLast(("Science Question " + i));
-            sportsQuestions.addLast(("Sports Question " + i));
-            rockQuestions.addLast(createRockQuestion(i));
-        }
+        createQuestions();
     }
 
-    public String createRockQuestion(int index) {
-        return "Rock Question " + index;
+    private void createQuestions() {
+        stream(Category.values()).forEach(category -> {
+            List<String> questions = new LinkedList<>();
+            for(int i = 0; i < 50; i++) {
+                questions.add(category + " Question " + i);
+            }
+            categoryQuestions.put(category, questions);
+        });
     }
 
     public boolean isPlayable() {
@@ -91,50 +91,38 @@ public class Game {
     }
 
     private void askQuestion() {
-        if(currentCategory() == "Pop") {
-            System.out.println(popQuestions.removeFirst());
-        }
-        if(currentCategory() == "Science") {
-            System.out.println(scienceQuestions.removeFirst());
-        }
-        if(currentCategory() == "Sports") {
-            System.out.println(sportsQuestions.removeFirst());
-        }
-        if(currentCategory() == "Rock") {
-            System.out.println(rockQuestions.removeFirst());
-        }
+        System.out.println(categoryQuestions.get(currentCategory()).remove(0));
     }
 
-
-    private String currentCategory() {
+    private Category currentCategory() {
         if(places[currentPlayer] == 0) {
-            return "Pop";
+            return POP;
         }
         if(places[currentPlayer] == 4) {
-            return "Pop";
+            return POP;
         }
         if(places[currentPlayer] == 8) {
-            return "Pop";
+            return POP;
         }
         if(places[currentPlayer] == 1) {
-            return "Science";
+            return SCIENCE;
         }
         if(places[currentPlayer] == 5) {
-            return "Science";
+            return SCIENCE;
         }
         if(places[currentPlayer] == 9) {
-            return "Science";
+            return SCIENCE;
         }
         if(places[currentPlayer] == 2) {
-            return "Sports";
+            return SPORTS;
         }
         if(places[currentPlayer] == 6) {
-            return "Sports";
+            return SPORTS;
         }
         if(places[currentPlayer] == 10) {
-            return "Sports";
+            return SPORTS;
         }
-        return "Rock";
+        return ROCK;
     }
 
     public boolean wasCorrectlyAnswered() {
